<resources>
    <string name="app_name">Bandeiras Quiz</string>
    <string name="hintNome">Digite seu nome...</string>
    <string name="buttonIniciar">Iniciar Quiz</string>
    <string name="buttonSair">Sair</string>
    <string name="textPerguntaPais">Que país é esse?</string>
    <string name="buttonResponder">Responder</string>
    <string name="buttonResponderNovamente">Responder Novamente</string>
    <string name="buttonTelaInicial">Tela Inicial</string>
    <string name="textRanking">Ranking</string>
    <string name="textAcertos">Acertos:</string>
    <string name="rbtPais1">Brasil</string>
    <string name="rbtPais2">Argentina</string>
    <string name="rbtPais3">Bélgica</string>
    <string name="rbtPais4">China</string>
    <string name="rbtPais5">Holanda</string>
    <string name="rbtPais6">Iêmen</string>
    <string name="rbtPais7">Islândia</string>
    <string name="rbtPais8">Japão</string>
    <string name="rbtPais9">México</string>
    <string name="rbtPais10">Panamá</string>
    <string name="rbtPais11">Alemanha</string>
    <string name="rbtPais12">Equador</string>
    <string name="rbtPais13">Itália</string>
    <string name="rbtPais14">Canadá</string>
    <string name="rbtPais15">Egito</string>
    <string name="rbtPais16">Cuba</string>
    <string name="rbtPais17">Arábia Saudita</string>
    <string name="rbtPais18">Inglaterra</string>
    <string name="rbtPais19">Irlanda</string>
    <string name="rbtPais20">Rússia</string>
    <string name="rbtPais21">França</string>
    <string name="rbtPais22">Uruguai</string>
    <string name="contador">-</string>
    <string name="textNome">Nome</string>
    <string name="textPontuacao">Pontuação</string>
    <string name="textRankingNome">Pontuação</string>
    <string name="textRankingPontuacao">Pontuação</string>
</resources>