<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ranking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1F1F1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="60dp"
        android:paddingRight="30dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/purple_500"
            android:gravity="center_vertical"
            android:text="@string/textRanking"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="71dp" />

        <TableLayout
            android:id="@+id/tableRanking"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:background="#F1C85A"
                    android:paddingLeft="10dp"
                    android:text="@string/textNome"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="#F1C85A"
                    android:paddingLeft="10dp"
                    android:text="@string/textPontuacao"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="348dp"
            android:layout_height="141dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIniciarQuiz"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:onClick="responderNovamente"
                android:text="@string/buttonResponderNovamente"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="34dp"
                android:layout_height="31dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSair"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:onClick="voltarParaTelaInicial"
                android:text="@string/buttonTelaInicial"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>